--- a/platformio.ini
+++ b/platformio.ini
@@ -11,7 +11,7 @@
 
 # CI binaries
 ; default_envs = nodemcuv2, esp8266_2m, esp01_1m_full, esp32dev, esp32_eth # ESP32 variant builds are temporarily excluded from CI due to toolchain issues on the GitHub Actions Linux environment
-default_envs = nodemcuv2, esp8266_2m, esp01_1m_full, esp32dev, esp32_eth, lolin_s2_mini, esp32c3dev, esp32s3dev_8MB
+; default_envs = nodemcuv2, esp8266_2m, esp01_1m_full, esp32dev, esp32_eth, lolin_s2_mini, esp32c3dev, esp32s3dev_8MB
 
 # Release binaries
 ; default_envs = nodemcuv2, esp8266_2m, esp01_1m_full, esp32dev, esp32_eth, lolin_s2_mini, esp32c3dev, esp32s3dev_8MB
@@ -30,7 +30,7 @@ default_envs = nodemcuv2, esp8266_2m, esp01_1m_full, esp32dev, esp32_eth, lolin_
 ; default_envs = h803wf
 ; default_envs = d1_mini_debug
 ; default_envs = d1_mini_ota
-; default_envs = esp32dev
+default_envs = esp32dev
 ; default_envs = esp8285_4CH_MagicHome
 ; default_envs = esp8285_H801
 ; default_envs = d1_mini_5CH_Shojo_PCB
@@ -180,7 +180,7 @@ lib_deps =
     makuna/NeoPixelBus @ 2.7.5
     https://github.com/Aircoookie/ESPAsyncWebServer.git @ ~2.0.7
   #For use of the TTGO T-Display ESP32 Module with integrated TFT display uncomment the following line
-    #TFT_eSPI
+    TFT_eSPI
   #For compatible OLED display uncomment following
     #U8g2 #@ ~2.33.15
   #For Dallas sensor uncomment following
