--- a/platformio.ini
+++ b/platformio.ini
@@ -162,9 +162,10 @@ framework = arduino
 board_build.flash_mode = dout
 monitor_speed = 115200
 # slow upload speed (comment this out with a ';' when building for development use)
-upload_speed = 115200
+; upload_speed = 115200
 # fast upload speed (remove ';' when building for development use)
-; upload_speed = 921600
+upload_speed = 921600
+; build_type = debug
 
 # ------------------------------------------------------------------------------
 # LIBRARIES: required dependencies
